# Chat-with-Code

./: .gitignore  Guide.md  README.md  codebase.py  main.py  pyproject.toml  requirements.txt
chroma_code_db/: chroma.sqlite3
